[package]
name = "topiary"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A very WIP and experimental CSS scoping library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/topiary"
homepage = "https://github.com/Tamschi/topiary/tree/v0.0.1"
documentation = "https://docs.rs/topiary/0.0.1"
keywords = ["CSS", "scoping"]
categories = ["web-programming", "text-processing"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]

[badges]
travis-ci = { repository = "Tamschi/topiary", branch = "unstable" }
is-it-maintained-issue-resolution = { repository = "Tamschi/topiary" }
is-it-maintained-open-issues = { repository = "Tamschi/topiary" }
maintenance = { status = "experimental" }

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
